--- a/assets/templates/reporte.html
+++ b/assets/templates/reporte.html
@@ -1,4 +1,7 @@
 <div class="row">
 
     REPORTE
+
+    <input type="text" id="fecha">
+<input type="button" id="excel" value="GENERAR REPORTE DEL DIA">
 </div>
