Primera versión de reporteador funcional, detalles esteticos aun por corregir

--- a/assets/templates/mainPage.html
+++ b/assets/templates/mainPage.html
@@ -21,6 +21,7 @@
     * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
     -->
 <link href="./main.css" rel="stylesheet"></head>
+++++ESTILOS++++
 <body>
     <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
         <div class="app-header header-shadow">
@@ -406,7 +407,7 @@
                             <div class="page-title-wrapper">
                                 <div class="page-title-heading">
                                     <div class="page-title-icon">
-                                        <i class="pe-7s-car icon-gradient bg-mean-fruit">
+                                        <i class="++++ICON++++ icon-gradient bg-mean-fruit">
                                         </i>
                                     </div>
                                     <div>++++TITULO++++
@@ -513,4 +514,6 @@
         </div>
     </div>
 <script type="text/javascript" src="./assets/scripts/main.js"></script></body>
+<script type="text/javascript" src="./assets/scripts/jquery.min.js"></script></body>
+++++JAVASCRIPTS++++
 </html>
