--- a/assets/templates/reporte.html
+++ b/assets/templates/reporte.html
@@ -1,7 +1,9 @@
 <div class="row">
 
     REPORTE
-
-    <input type="text" id="fecha">
-<input type="button" id="excel" value="GENERAR REPORTE DEL DIA">
+    
+    <input type="text" id="fechaInicio">
+    <input type="text" id="fechaFin">
+    <input type="button" id="excel" value="GENERAR REPORTE DEL DIA">
+    
 </div>
