funcionando la busqueda de racs por servidor y la de nucs

--- a/assets/templates/mainPage.html
+++ b/assets/templates/mainPage.html
@@ -517,3 +517,5 @@
 <script type="text/javascript" src="./assets/scripts/jquery.min.js"></script></body>
 ++++JAVASCRIPTS++++
 </html>
+++++EXTRAS++++
+
