--- a/assets/templates/leftMenu.html
+++ b/assets/templates/leftMenu.html
@@ -41,23 +41,18 @@
                                 
                                 <li class="app-sidebar__heading">RACs y NUCs</li>
                                 <li>
-                                    <a href="forms-controls.html">
-                                        <i class="metismenu-icon pe-7s-mouse">
-                                        </i>ELIMINAR
+                                    <a href="nucs.php">
+                                        <i class="metismenu-icon pe-7s-folder">
+                                        </i>NUCs
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="forms-layouts.html">
+                                    <a href="racs.php">
                                         <i class="metismenu-icon pe-7s-eyedropper">
-                                        </i>CAMBIAR NÚMERO
+                                        </i>RACs
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="forms-validation.html">
-                                        <i class="metismenu-icon pe-7s-pendrive">
-                                        </i>CAMBIAR NOMBRE
-                                    </a>
-                                </li>
+                                
                                 <li class="app-sidebar__heading">REPORTES</li>
                                 <li>
                                     <a href="reporte.php">
