funcionalidad completa de borrado de nuc con manjejo de permisos por usuario, inicio de funciones parecidas para RACy esqueleto de usuarios

--- a/assets/templates/leftMenu.html
+++ b/assets/templates/leftMenu.html
@@ -52,6 +52,15 @@
                                         </i>RACs
                                     </a>
                                 </li>
+                                <li class="app-sidebar__heading">USUARIOS</li>
+                                <li>
+                                    <a href="usuarios.php">
+                                        <i class="metismenu-icon pe-7s-folder">
+                                        </i>Usuarios
+                                    </a>
+                                </li>
+                                
+                                
                                 
                                 <li class="app-sidebar__heading">REPORTES</li>
                                 <li>
